...

  /// بناء إدخال الباركود في الشريط الجانبي
  Widget _buildSidebarBarcodeInput() => Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: <Widget>[
          const Text(
            'إضافة منتج',
            style: TextStyle(
              fontSize: 16,
              fontWeight: FontWeight.bold,
              color: AppConstants.textColor,
            ),
          ),
...
            ),
            const SizedBox(height: 12),
            Consumer(
              builder: (BuildContext context, WidgetRef ref, Widget? child) =>
                  Column(
                children: <Widget>[
                  _buildSummaryRow('المنتجات:',
                      '${ref.read(cartStateProvider).cart.length}'),
                  _buildSummaryRow('الكمية الإجمالية:',
                      '${ref.read(cartStateProvider).cart.fold<int>(0, (int sum, CartItem item) => sum + item.quantity)}'),
                  _buildSummaryRow(
                      'الربح:', formatCurrency(ref.read(totalProfitProvider))),
                ],
...
